--- a/.drone.yml
+++ b/.drone.yml
@@ -21,5 +21,4 @@ pipeline:
     port: 22
     secrets: [ ssh_password ]
     script:
-    - docker pull registry.fge.cloud/fabiangehrlicher/reverseproxy:latest
-    - cd /root/docker && ls -la
+    - nohup cdstack-deploy &
